@uppy/dashboard - fix for file previews being partially invisible sometimes in safari (#1584)
* @uppy/dashboard - fix for file previews being partially invisible sometimes in safari

* @uppy/dashboard - readded border-radius for the added images

--- a/packages/@uppy/dashboard/src/style.scss
+++ b/packages/@uppy/dashboard/src/style.scss
@@ -781,6 +781,11 @@ a.uppy-Dashboard-poweredBy {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  // Fixes file previews being partially invisible in safari (for some pics only).
+  // (https://stackoverflow.com/a/27971913/3192470)
+  transform: translateZ(0);
+  // We need a repeated border-radius because of the transform.
+  border-radius: 3px;
 }
 
 
